Make `more` = null